[package]
name = "giz-week-2-challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
socket2 = { version = "0.6.0", features = ["all"] }
tokio = { version = "1.47.1", features = ["full"], optional = true }

[features]
default = []
async-rt = ["tokio"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# strip = "symbols"
# debug = true
